internal/fpconfig/test/test_pipelines/invalid_pipelines/invalid_step_attribute.fp
pipeline "invalid_step_attribute" {
    step "echo" "foo" {
        abc = "foo"
    }
}
